--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
 }
 button {
 	background: rgba(0,0,0,0.5);
-	border: 1px solid gray;
+	border: 2px solid gray;
 	border-radius: 10px;
 	width: 230px;
 	height: 43px;            
@@ -19,7 +19,7 @@ button {
 	margin: 6px;
 }
 button:hover {
-	border: 1px solid red;
+	border: 2px solid red;
 	border-radius: 10px;
 }
 .content {
@@ -115,11 +115,10 @@ button:hover {
 <body class="bg-darker">
 <div id="container"  style="color: red">
 <h1 style='font-size:25px;text-align:center;color:red;'>DEX's Host | PS4 9.00</h1>
-<h1 id=msgs2 style='font-size:25px;text-align:center;color:white;'>Status</h1>
+<h1 id=msgs2 style='font-size:25px;padding-top:200px;text-align:center;color:white;'>Status</h1>
 <div style="text-align:center"  id="MyItems">
 <a href="Manual/index.html"><button style='font-size:21px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs Manual Exploit | 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual</B></button></a>
 <a href="Auto/index.html"><button style='font-size:21px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs Auto Exploit | 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto</B></button></a>
-<!-- <a href="PSFree/index.html"><button style='font-size:21px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs PSFree-Lapse Exploit | 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>PSFree-Lapse</B></button></a> -->
 <div class="content" >
  	<div class="text" >
  	 <br><span style="font-size:20px"<span class="red" >Edited by:</span >&nbsp;&nbsp; <span class="hue" >illusional</span>
