--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <title>DEX's Host | 9.00</title>
 <style type="text/css">
 body {
-	background-color: #000000;  
+	background: url("https://i.imgur.com/Ob3TLee.jpeg");
 	background-repeat: no-repeat;
+	font-family:sans-serif;
 	height: 95%;
 }
 button {
@@ -22,24 +23,19 @@ button:hover {
 	border: 2px solid red;
 	border-radius: 10px;
 }
-.content {
-	width: 35%;
-	height: 10%;
-	margin-left: 33%;
-	background: rgba(0, 0, 0, 0.5);
-	color: white;
-	font-size: 15px;
-	text-align: center;
-	border-radius: 30px;
-	line-height: 20px;
-	position: absolute;
-	bottom: 50px;
-}
+ .content {
+  width:50%;
+  height:12.2%;
+  margin-left:24.5%;
+  font-size:15px;
+  position:absolute;
+  bottom:50px;
+ }
  .red {
 	color:red;
 }
 .hue {
-	color: red;
+	background: black;
 	padding: 10px;
 	border-radius: 10px;
 	animation: hue 5s linear infinite;
@@ -47,7 +43,7 @@ button:hover {
 	box-shadow: 0px 0px 25px red;
 }
 .hue:hover {
-	background:transparent;
+	background: black;
 }
 @keyframes hue {
 	0% {
@@ -112,10 +108,10 @@ button:hover {
 }
 </style>
 </head>
-<body class="bg-darker">
+<body>
 <div id="container"  style="color: red">
 <h1 style='font-size:25px;text-align:center;color:red;'>DEX's Host | PS4 9.00</h1>
-<h1 id=msgs2 style='font-size:25px;padding-top:200px;text-align:center;color:white;'>Status</h1>
+<h1 id=msgs2 style='font-size:25px;padding-top:10px;text-align:center;color:white;'>Status</h1>
 <div style="text-align:center"  id="MyItems">
 <a href="Manual/index.html"><button style='font-size:21px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs Manual Exploit | 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual</B></button></a>
 <a href="Auto/index.html"><button style='font-size:21px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs Auto Exploit | 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto</B></button></a>
@@ -124,6 +120,7 @@ button:hover {
  	 <br><span style="font-size:20px"<span class="red" >Edited by:</span >&nbsp;&nbsp; <span class="hue" >illusional</span>
  	</div>
  </div>
+</div>
 </div>
 </body>
 </html>
