--- a/Auto/index.html
+++ b/Auto/index.html
@@ -8,6 +8,7 @@ font-size:20px;
 font-weight:lighter;
 text-align:left;
 color:#FFFFFF;
+background: url("https://i.imgur.com/Ob3TLee.jpeg");
 background-size:cover;
 }
 .modal {
@@ -25,15 +26,11 @@ background-size:cover;
 }
  .content {
   width:50%;
-  height:15%;
+  height:12.2%;
   margin-left:25%;
-  background:rgba(0,0,0,0.5);
-  color:white;
   font-size:15px;
-  text-align:center;
-  border-radius:30px;
-  line-height:10px;
-  position:absolute;bottom:50px;
+  position:absolute;
+  bottom:50px;
  }
  .title {
   font-size:40px;
@@ -647,11 +644,13 @@ Tools.style.display = "none";
 <button id="button-Payload" onMouseOver="progress.innerHTML='Module Dumper'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_ModuleDumper()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > Module Dumper </button>
 <br><br><br>
 </div>
+<div style="text-align:center"  id="MyItems">
 <div class="content" >
  	    <div class="text" >
- 	        <br><br><br><span style="text-shadow: 4px 4px 4px black;font-size:20px" class="red" >Edited by:</span >&nbsp;&nbsp; <span style="text-shadow: 4px 4px 4px black;" class="hue" >illusional</span>
- 	        <br><br><br><br><br><span style="text-shadow: 4px 4px 4px black;font-size:20px" class="red" >Thanks To:</span >&nbsp;&nbsp; <a style="font-size:15px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Karo Sharifi, Sleirsgoevy, Al Azif, ChendoChap, SiSTRo, Specter, Znullptr</a>
+ 	        <br><span style="text-shadow: 4px 4px 4px black;font-size:20px" class="red" >Edited by:</span >&nbsp;&nbsp; <span style="text-shadow: 4px 4px 4px black;" class="hue" >illusional</span>
+ 	        <br><br><span style="text-shadow: 4px 4px 4px black;font-size:20px" class="red" >Thanks To:</span >&nbsp;&nbsp; <a style="font-size:15px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Karo Sharifi, Sleirsgoevy, Al Azif, ChendoChap, SiSTRo, Specter, Znullptr</a>
 	    </div>
+</div>
 </div>
 <script>
 const OFFSET_wk_vtable_first_element = 0x104F110;
