--- a/Manual/index.html
+++ b/Manual/index.html
@@ -8,6 +8,7 @@ font-size:20px;
 font-weight:lighter;
 text-align:left;
 color:#FFFFFF;
+background: url("https://i.imgur.com/Ob3TLee.jpeg");
 background-size:cover;
 }
 .modal {
@@ -25,15 +26,11 @@ background-size:cover;
 }
  .content {
   width:50%;
-  height:15%;
+  height:12.2%;
   margin-left:25%;
-  background:rgba(0,0,0,0.5);
-  color:white;
   font-size:15px;
-  text-align:center;
-  border-radius:30px;
-  line-height:10px;
-  position:absolute;bottom:50px;
+  position:absolute;
+  bottom:50px;
  }
  .title {
   font-size:40px;
@@ -49,13 +46,14 @@ background-size:cover;
 .hue {
   color:red;
   padding:10px;
+  background: black;
   border-radius:10px;
   animation:hue 5s linear infinite;
   -webkit-animation: hue 5s linear infinite;
   box-shadow: 0px 0px 25px red;
  }
 .hue:hover{
-  background:transparent;
+  background: black;
  }
  @keyframes hue{
  0%{
@@ -134,22 +132,6 @@ background-size:cover;
   outline: none;
   box-shadow: 0 4px 6px -5px hsl(0, 0%, 40%), inset 0px 4px 6px -5px hsl(0, 0%, 2%);
   backdrop-filter: blur(5px);
-}
-/* Modal Content */
-.modal-content {
-  font-family: BFARNAZ;
-  font-size: 18px;
-  position: relative;
-  background-color: #dddddd;
-  margin: auto;
-  padding: 0;
-  border: 1px solid #888;
-  width: 50%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.4s;
-  animation-name: animatetop;
-  animation-duration: 0.4s
 }
 button {
             background:rgba(0,0,0,0.5);
@@ -746,11 +728,13 @@ Tools.style.display = "none";
 <button id="button-Payload" onMouseOver="progress.innerHTML='Module Dumper'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_ModuleDumper()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > Module Dumper </button>
 <br><br><br>
 </div>
+<div style="text-align:center"  id="MyItems">
 <div class="content" >
- 	    <div class="text" >
- 	        <br><br><br><span style="text-shadow: 4px 4px 4px black;font-size:20px" class="red" >Edited by:</span >&nbsp;&nbsp; <span style="text-shadow: 4px 4px 4px black;" class="hue" >illusional</span>
- 	        <br><br><br><br><br><span style="text-shadow: 4px 4px 4px black;font-size:20px" class="red" >Thanks To:</span >&nbsp;&nbsp; <a style="font-size:15px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Karo Sharifi, Sleirsgoevy, Al Azif, ChendoChap, SiSTRo, Specter, Znullptr</a>
+ 	    <div class="text">
+ 	        <br><span style="text-shadow: 4px 4px 4px black;font-size:20px" class="red" >Edited by:</span >&nbsp;&nbsp; <span style="text-shadow: 4px 4px 4px black;" class="hue" >illusional</span>
+ 	        <br><br><span style="text-shadow: 4px 4px 4px black;font-size:20px" class="red" >Thanks To:</span >&nbsp;&nbsp; <a style="font-size:15px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Karo Sharifi, Sleirsgoevy, Al Azif, ChendoChap, SiSTRo, Specter, Znullptr</a>
 	    </div>
+</div>
 </div>
 <script>
 localStorage.setItem('fanthreshold', tempC.value);
