--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <style type="text/css">
 body {
 	background: url("https://i.imgur.com/Ob3TLee.jpeg");
+	background-color: black;
 	background-repeat: no-repeat;
 	font-family:sans-serif;
 	height: 95%;
