--- a/Manual/index.html
+++ b/Manual/index.html
@@ -9,6 +9,7 @@ font-weight:lighter;
 text-align:left;
 color:#FFFFFF;
 background: url("https://i.imgur.com/Ob3TLee.jpeg");
+background-color: black;
 background-size:cover;
 }
 .modal {
