--- a/index.html
+++ b/index.html
@@ -4,47 +4,46 @@
 <title>DEX's Host | 9.00</title>
 <style type="text/css">
 body {
-	background: url("https://i.imgur.com/Ob3TLee.jpeg");
-	background-color: black;
+	background: black;
 	background-repeat: no-repeat;
 	font-family:sans-serif;
 	height: 95%;
 }
 button {
-	background: rgba(0,0,0,0.5);
-	border: 2px solid gray;
-	border-radius: 10px;
-	width: 230px;
-	height: 43px;            
-	text-align: center;
-	padding: 6px;
-	margin: 6px;
+	background:rgba(0, 0, 0, 0.5);
+	border:2px solid gray;
+	border-radius:10px;
+	width:230px;
+	height:43px;            
+	text-align:center;
+	padding:6px;
+	margin:6px;
 }
 button:hover {
-	border: 2px solid red;
-	border-radius: 10px;
+	border:2px solid red;
+	border-radius:10px;
 }
  .content {
-  width:50%;
-  height:12.2%;
-  margin-left:24.5%;
-  font-size:15px;
-  position:absolute;
-  bottom:50px;
- }
- .red {
+	width:50%;
+	height:12.2%;
+	margin-left:24.5%;
+	font-size:15px;
+	position:absolute;
+	bottom:50px;
+}
+.red {
 	color:red;
 }
 .hue {
-	background: black;
-	padding: 10px;
-	border-radius: 10px;
-	animation: hue 5s linear infinite;
-	-webkit-animation: hue 5s linear infinite;
-	box-shadow: 0px 0px 25px red;
+	background:black;
+	padding:10px;
+	border-radius:10px;
+	animation:hue 5s linear infinite;
+	-webkit-animation:hue 5s linear infinite;
+	box-shadow:0px 0px 25px red;
 }
 .hue:hover {
-	background: black;
+	background:black;
 }
 @keyframes hue {
 	0% {
@@ -52,31 +51,31 @@ button:hover {
 	-webkit-filter:hue-rotate(0deg);
 	}
 	10% {
-	box-shadow: 0px 1px 25px red;
+	box-shadow:0px 1px 25px red;
 	}
 	20% {
-	box-shadow: 1px 1px 25px red;
+	box-shadow:1px 1px 25px red;
 	}
 	30% {
-	box-shadow: 1px 0px 25px red;
+	box-shadow:1px 0px 25px red;
 	}
 	40% {
-	box-shadow: 1px -1px 25px red;
+	box-shadow:1px -1px 25px red;
 	}
 	50% {
-	box-shadow: 0px -1px 25px red;
+	box-shadow:0px -1px 25px red;
 	}
 	60% {
-	box-shadow: -1px -1px 25px red;
+	box-shadow:-1px -1px 25px red;
 	}
 	70% {
-	box-shadow: -1px 0px 25px red;
+	box-shadow:-1px 0px 25px red;
 	}
 	80% {
-	box-shadow: -1px 1px 25px red;
+	box-shadow:-1px 1px 25px red;
 	}
 	90% {
-	box-shadow: 0px 1px 25px red;
+	box-shadow:0px 1px 25px red;
 	}
 	100% {
 	filter: hue-rotate(360deg);
@@ -84,7 +83,7 @@ button:hover {
 	}
 }
 .text {
-	padding-bottom: 50px;
+	padding-bottom:50px;
 }
 .back {
 	font-size:25px;
@@ -105,7 +104,7 @@ button:hover {
 	color: white;
   }
 .pointer {
-	cursor: pointer;
+	cursor:pointer;
 }
 </style>
 </head>
