--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ button:hover {
 <div style="text-align:center"  id="MyItems">
 <a href="Manual/index.html"><button style='font-size:21px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs Manual Exploit | 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual</B></button></a>
 <a href="Auto/index.html"><button style='font-size:21px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs Auto Exploit | 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto</B></button></a>
+<a href="PSFree/index.html"><button style='font-size:21px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs PSFree Exploit | 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>PSFree</B></button></a>
 <div class="content" >
  	<div class="text" >
  	 <br><span style="font-size:20px"<span class="red" >Edited by:</span >&nbsp;&nbsp; <span class="hue" >illusional</span>
