--- a/PSFree/index.html
+++ b/PSFree/index.html
@@ -18,16 +18,22 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>exploit</title>
+        <title>PSFree-Lapse Exploit For PS4 9.00</title>
         <style>
             @font-face {
                 font-family: 'logging';
-                src: url('./fonts/LiberationMono-Regular.ttf');
+                src: url('fonts/LiberationMono-Regular.ttf');
             }
             #console {
                 font-family: 'logging';
             }
         </style>
+        <script>
+        if (window.applicationCache.status=='0')
+        {
+          window.location.replace("cache.html");
+        }
+        </script>
     </head>
     <body>
         PSFree: A PS4/PS5 Exploit Chain<br>
